Added debug logging when framework is missing during agent removal.

This patch adds extra debug logging to `Master::__removeSlave()`
in order to help triage MESOS-9609 if that issue is observed
again in the future.

Review: https://reviews.apache.org/r/70559/